--- a/package.json
+++ b/package.json
@@ -11,11 +11,16 @@
   "dependencies": {
     "@react-google-maps/api": "^2.20.5",
     "@vis.gl/react-google-maps": "^1.5.0",
+    "axios": "^1.7.9",
     "dotenv": "^16.4.7",
+    "json-server": "^1.0.0-beta.3",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.471.1",
     "next": "15.1.4",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-chartjs-2": "^5.3.0",
+    "react-dom": "^19.0.0",
+    "react-leaflet": "^5.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
